# atpgk

./: CMakeLists.txt  CMakeUserPresets.json  Doxyfile  README.md  build.sh  conanfile.txt  config.h.in
doc/html/: ANSI_8hpp.html  ANSI_8hpp.js  ANSI_8hpp__dep__incl.map  ANSI_8hpp__dep__incl.md5  ANSI_8hpp_source.html  BasicCell_8cpp.html  BasicCell_8cpp__incl.map  BasicCell_8cpp__incl.md5  BasicCell_8cpp_source.html  BasicCell_8hpp.html  BasicCell_8hpp__dep__incl.map  BasicCell_8hpp__dep__incl.md5  BasicCell_8hpp__incl.map  BasicCell_8hpp__incl.md5  BasicCell_8hpp_source.html  BinaryCell_8cpp.html  BinaryCell_8cpp__incl.map  BinaryCell_8cpp__incl.md5  BinaryCell_8cpp_source.html  BinaryCell_8hpp.html  BinaryCell_8hpp__dep__incl.map  BinaryCell_8hpp__dep__incl.md5  BinaryCell_8hpp__incl.map  BinaryCell_8hpp__incl.md5  BinaryCell_8hpp_source.html  Cell_8cpp.html  Cell_8cpp__incl.map  Cell_8cpp__incl.md5  Cell_8cpp_source.html  Cell_8hpp.html  Cell_8hpp__dep__incl.map  Cell_8hpp__dep__incl.md5  Cell_8hpp__incl.map  Cell_8hpp__incl.md5  Cell_8hpp_source.html  ComplexCell_8cpp.html  ComplexCell_8cpp__incl.map  ComplexCell_8cpp__incl.md5  ComplexCell_8cpp_source.html  ComplexCell_8hpp.html  (+1170 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  (+74 more)
examples/: README.md
examples/1_And/: HDL.v  netlist.json  synth.ys  vectors.json  vectors.txt
examples/2_AOI4/: HDL.v  netlist.json  vectors.json  vectors.txt
examples/3_Nand/: netlist.json  synth.ys  vectors.json  vectors.txt
examples/4_Binary/: HDL.v  netlist.json  vectors.json  vectors.txt
include/atpg_top/: atpg_top.hpp
include/builder_API/: builder_API.hpp
include/fault_API/: fault_API.hpp
include/parser/: gate.hpp  parsed_circuit.hpp  parser.hpp  yosys_gate_level_cells.hpp  yosys_json_parser.hpp
include/reader/: reader.hpp
include/tree/: Cell.hpp  Fault.hpp  FaultDecorator.hpp  Input.hpp  Node.hpp  NodeVisitor.hpp  Output.hpp  Tree.hpp
include/tree/Yosys/: BinaryCell.hpp  ComplexCell.hpp  FlipFlop.hpp  UnaryCell.hpp  YosysCell.hpp
include/utils/: ANSI.hpp
include/writer/: writer.hpp  writer_json.hpp  writer_txt.hpp
lang/: en.json  fr.json
resources/doc/: mainpage.md
src/: main.cpp
src/atpg_top/: atpg_top.cpp
src/builder_API/: builder_API.cpp
src/fault_API/: fault_API.cpp
src/parser/: gate.cpp  parsed_circuit.cpp  parser.cpp  yosys_json_parser.cpp
src/reader/: reader.cpp
src/tree/: Cell.cpp  Fault.cpp  FaultDecorator.cpp  Input.cpp  Node.cpp  Output.cpp  Tree.cpp
src/tree/Yosys/: BinaryCell.cpp  ComplexCell.cpp  FlipFlop.cpp  UnaryCell.cpp  YosysCell.cpp
src/writer/: writer.cpp  writer_json.cpp  writer_txt.cpp
test/: test_main.cpp  test_yosys_json_parser.cpp
test/benchmark/: synth.sh  synth.ys
test/benchmark/Combinatory_circuits/JSON_Netlist/: comb.json  comb_2_modules.json  comb_2_outputs.json  generate-1.json  perso.json
test/benchmark/Combinatory_circuits/Verilog/: comb.v  comb_2_modules.v  comb_2_outputs.v  generate-1.v  perso.v
test/benchmark/Yosys_gates/JSON_Netlist/: and.json  andnot.json  aoi3.json  aoi4.json  buf.json  mux.json  mux16.json  (+13 more)
(+19 files in other folders)
